# sp-foundation2

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: Assertions.h  BasePlatform.h  FFMpeg.h  LinuxPlatform.h  MacOSPlatform.h  SpFoundation2.cpp  SpFoundation2.h  SpectrumFoundation.cpp  SpectrumFoundation.h  VideoStream.cc  VideoStream.h  VideoStreamManager.cc  VideoStreamManager.h  VideoStreamProperties.cc  VideoStreamProperties.h  WindowsPlatform.h
